--- a/client/index.html
+++ b/client/index.html
@@ -38,12 +38,10 @@
 
 			<main id=chatbox ng-show="currentChannel">
 				<section ng-repeat="channel in channels" ng-show="isCurrentChannel(channel.name)"> <!-- Pour chaque salon -->
-					<div> <!-- On affiche le salon et son topic -->
-						<p>{{channel.topic}}</p>
-					</div>
+					<h2 ng-bind="channel.topic"></h2>
 					<div ng-repeat="block in channel.blocks"> <!-- Pour chaque bloc de messages -->
 						<h3 class="user" ng-bind="block.user"></h3> <!-- Une fois son auteur -->
-						<div class="message-l">
+						<div ng-class="getMessageSenderClass(block.user)">
 							<p
 								 ng-repeat="message in block.messages"
 								 ng-bind="message.text"
@@ -95,7 +93,7 @@
 			<section id="userConnected">
           <div ng-repeat="channel in channels" ng-show="isCurrentChannel(channel.name)"> <!-- On affiche la liste des utilisateurs -->
 						<ul class="Everyone">
-							<li ng-repeat="user in channel.users" ng-bind="user"></li>
+							<li ng-repeat="user in channel.users" ng-bind="user" ng-class="getUserModeClass(user)"></li>
 						</ul>
 					</div>
 			</section>
