--- a/client/index.html
+++ b/client/index.html
@@ -84,7 +84,7 @@
       <hr>
 
 			<footer>
-				<p>WebIRC Client by Rousseau Mathieu &amp; Castiaux Julien</p>
+				<p><a href="https://www.github.com/Julien00859/WebIRC/" target=_blank>WebIRC Client</a> by Rousseau Mathieu &amp; Castiaux Julien</p>
 			</footer>
     </div>
 
