--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
 		<!-- Dépendances JavaScript -->
 		<script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.js" type="text/javascript"> // AngularJS </script>
+		<script src="https://code.angularjs.org/1.5.0/angular-animate.js" type="text/javascript"> // Animation </script>
 		<script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
 		<script src="https://cdn.socket.io/socket.io-1.4.3.js"> // Socket.io </script>
 		<script src="js/classie.js"> // Ajout de classes </script>
@@ -92,8 +93,13 @@
 			<h1 id="titreAside">Connecté(s)</h1>
 			<section id="userConnected">
           <div ng-repeat="channel in channels" ng-show="isCurrentChannel(channel.name)"> <!-- On affiche la liste des utilisateurs -->
-						<ul class="Everyone">
-							<li ng-repeat="user in channel.users" ng-bind="user" ng-class="getUserModeClass(user)"></li>
+						<ul ng-class="Everyone">
+							<li ng-mouseover='showMenu()' ng-mouseleave="hideMenu()" ng-repeat="user in channel.users" ng-class="getUserModeClass(user)">
+								{{user}}
+								<ul ng-show="menu" ng-class="optionsMenu">
+									<li ng-repeat="option in optionsMenu" ng-bind="option"></li>
+								</ul>
+							</li>
 						</ul>
 					</div>
 			</section>
